# binaryen

./: CHANGELOG.md  binaryen-bin.opam
.github/workflows/: windows.yml
src/: binaryen-c.cpp  binaryen-c.h  wasm-binary.h  wasm-builder.h  wasm-type.h  wasm.h  wasm2js.h
src/ir/: ReFinalize.cpp  child-typer.h  effects.h  linear-execution.h  module-utils.cpp  properties.h  subtype-exprs.h  type-updating.cpp
src/parser/: contexts.h  parse-2-typedefs.cpp  parsers.h
src/passes/: CodeFolding.cpp  GenerateDynCalls.cpp  Heap2Local.cpp  OptimizeInstructions.cpp  Print.cpp  RemoveUnusedBrs.cpp  SimplifyLocals.cpp  Vacuum.cpp
src/tools/: wasm-metadce.cpp
src/tools/fuzzing/: fuzzing.cpp  heap-types.cpp
src/wasm/: wasm-binary.cpp  wasm-emscripten.cpp  wasm-ir-builder.cpp  wasm-s-parser.cpp  wasm-stack.cpp  wasm-type.cpp  wasm-validator.cpp  wasm.cpp
test/example/: c-api-kitchen-sink.txt
test/gtest/: type-builder.cpp
test/lit/passes/: coalesce-locals-eh.wast  code-folding-eh.wast  code-pushing-eh.wast  dce-eh.wast  flatten-eh.wast  flatten_all-features.wast  heap2local.wast  inlining-eh.wast  optimize-instructions-gc-heap.wast  simplify-locals-eh.wast
