opam-version: "2.0"
name: "binaryen-bin"
synopsis: "Compiler and toolchain infrastructure library for WebAssembly"
description: """
 Binaryen is a compiler and toolchain infrastructure library for WebAssembly.
 It aims to make compiling to WebAssembly easy, fast, and effective.
"""
maintainer: "Jérôme Vouillon <jerome@tarides.com>"
license: "Apache-2.0"
authors: ["Alon Zakai" "Thomas Lively"]
homepage: "https://github.com/WebAssembly/binaryen/"
bug-reports: "https://github.com/ocaml-wasm/wasm_of_ocaml/issues"
dev-repo: "git+https://github.com/WebAssembly/binaryen.git"
depends: ["conf-cmake" "conf-ninja" {os-family != "windows"}]
build: [
  ["cmake" "-G" "Ninja" "." "-DBUILD_STATIC_LIB=ON" "-DBUILD_TESTS=off" "-DINSTALL_LIBS=off" "-DENABLE_WERROR=off"] {os-family != "windows"}
  ["ninja"] {os-family != "windows"}
  ["cmake" "." "-DBUILD_STATIC_LIB=ON" "-DBUILD_TESTS=off" "-DINSTALL_LIBS=off" "-DCMAKE_C_COMPILER=x86_64-w64-mingw32-gcc" "-DCMAKE_CXX_COMPILER=x86_64-w64-mingw32-g++"] {os-family = "windows"}
  [make "-j" jobs] {os-family = "windows"}
]
install: [
  ["cp" "bin/wasm-opt" "bin/wasm-metadce" "bin/wasm-merge" "%{bin}%"] { os-family != "windows" }
  ["cp" "bin/wasm-opt.exe" "bin/wasm-metadce.exe" "bin/wasm-merge.exe" "%{bin}%"] { os-family = "windows" }
]
